<resources>
    <string name="app_name">Free Time</string>
    <string name="tab_now_on_cinema">NOW ON CINEMA</string>
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_most_popular">MOST POPULAR</string>
    <string name="tab_top_rated">TOP RATED</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_placeholder_movie_name">Spiderman Homecoming</string>
    <string name="txt_placeholder_movie_type">(Drama, Horror, Triller)</string>
    <string name="txt_placeholder_movie_popularity">Current Popularity</string>
    <string name="btn_movie_overview">Overview</string>
    <string name="lbl_refersh">Refresh</string>
    <string name="msg_generic_no_data">No Data To Display</string>
    <string name="action_view_list">List</string>
    <string name="action_movies">Movies</string>
    <string name="action_tv_shows">TV Shows</string>
    <string name="action_favorites">Favorites</string>
    <string name="tab_tv_airing_today">TV AIRING TODAY</string>
    <string name="tab_tv_on_the_air">TV ON THE AIR</string>
    <string name="tv_movie_name">Jumanji:Welcome to the Jungle</string>
    <string name="tv_released_date">January 1994</string>
    <string name="tv_movie_genres">(Drama,Horror,Trailer)</string>

    <string name="MOVIE_DB_API_KEY">6eb6146f403f23477c11206ed0c76288</string>
    <string name="action_search">Search</string>
    <string name="section_name_placeholder">Movies</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="movie_details_data"> "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"</string>
    <string name="drama">Drama</string>
    <string name="crime">Crime</string>
    <string name="movie_time">2 hrs 22 mins</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_title">Official Trailer</string>
    <string name="trailer_type">Trailer</string>
    <string name="movie_detail_title">Fear can hold you prisoner. Hope can set you free.</string>
    <string name="movie_name">Fantastic Beast And Where to find them.</string>
    <string name="rating_placeholder" formatted="false">7.2/10</string>
    <string name="movie_overview_placeholder">Extensions are a powerful feature that Swift shares with Objective-C. An extension allows you to add functionality to any class, structure, or enumeration, including those in the standard Swift library or the system frameworks. The syntax of an extension definition is similar to that of classes and structures. The extension is introduced by the keyword extension followed by the name of the extended type and then the extensions themselves. You can add computed (but not stored) properties, methods, initializers, nested types, and protocol conformance to the extended type.</string>
    <string name="trailers">Trailers</string>
    <string name="movie_genre_palceholder">Romance</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="version">Version 1.0</string>
    <string name="cast_name">Dakota Johnson Dakota Johnson Dakota</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
    <string name="hint_search">Enter movie and tv shows</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
    <string name="moves_and_tvshows"><![CDATA[Movies & TV Shows]]></string>
    <string name="Developed_by">Developed by</string>
    <string name="me">Nyi Nyi Htun Lwin</string>
    <string name="contact">Contact me via</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="similar_tvshows">Similar TV Shows</string>
    <string name="biography">Biography</string>
    <string name="movie_cast">Movie Cast</string>
    <string name="person_details">Details</string>
    <string name="no_data">...</string>
    <string name="tvshow_cast">TV Show Cast</string>

</resources>
