<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/action_movies" />
        <item
            android:id="@+id/nav_movie_series"
            android:icon="@drawable/ic_tv_shows_black_24dp"
            android:title="@string/action_tv_shows" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/action_favorites" />
    </group>
    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="About" />
        </menu>
    </item>

</menu>
