<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    tools:context="projects.nyinyihtunlwin.freetime.fragments.MoviesFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/MyCustomTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_color"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_now_on_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_now_on_cinema" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_upcoming" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_most_popular" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_top_rated" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs" />
</RelativeLayout>
