<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/card_radius_small"
    card_view:cardElevation="@dimen/card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_icon_height"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_movie_palceholder" />

        <ImageView
            android:id="@+id/iv_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_transparent_oval"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/ic_favorite_border_24dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rate_view"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_transparent_left_top_curve"
            android:layout_marginBottom="@dimen/margin_small">

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/rb_movie"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:rating="5" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_released_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_transparent_right_bottom_curve"
            android:padding="@dimen/margin_small"
            android:text="@string/tv_released_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular" />


        <RelativeLayout
            android:id="@+id/rate_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_movie"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/tv_movie_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_name"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/tv_movie_genres"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
